--- a/k8s/simpleCrudServer-with-service.yaml
+++ b/k8s/simpleCrudServer-with-service.yaml
@@ -25,5 +25,24 @@ spec:
           ports:
             - name: server-port
               containerPort: 3000
-              hostPort: 30061
 
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: server
+  labels:
+    app: crud-server
+    component: server
+spec:
+  type: NodePort
+  selector:
+    app: crud-server
+    component: server
+  ports:
+    - port: 3000
+      protocol: TCP
+      name: server-port
+      nodePort: 30061
+      
